update tune files
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/conf/machine/qemuppc64.conf
+++ b/conf/machine/qemuppc64.conf
@@ -3,17 +3,30 @@
 #@DESCRIPTION: Machine configuration for running an PPC system under qemu emulation
 
 require conf/machine/include/qemu.inc
-DEFAULTTUNE ?= "ppc64p5"
-require conf/machine/include/tune-ppcpower.inc
+DEFAULTTUNE ?= "ppc64p6"
+require conf/machine/include/tune-ppcpower6.inc
 
+MACHINEOVERRIDES .= ":ppc64p6"
 
-#require conf/multilib.conf
-#MULTILIBS = "multilib:lib32"
-#DEFAULTTUNE_virtclass-multilib-lib32 = "ppcp5"
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "ppcp6"
 
 KERNEL_IMAGETYPE = "vmlinux"
 
+MACHINE_FEATURES += "screen keyboard pci usbhost ext2 ext3 serial "
+
 MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
 IMAGE_FSTYPES = "ext2 ext3 cpio.gz"
-SERIAL_CONSOLE = "9600 hvc0"
 
+SERIAL_CONSOLE ?= "9600 hvc0"
+
+PREFERRED_PROVIDER_virtual/xserver ?= "xserver-xorg"
+
+XSERVER = " \
+    xserver-xorg \
+    xf86-input-evdev \
+    xf86-input-mouse \
+    xf86-input-keyboard \
+    xf86-video-fbdev \
+"
